kubernetes/ingress.yml
apiVersion: v1
items:
- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /$1
      nginx.ingress.kubernetes.io/configuration-snippet: rewrite ^([^.]*[^/])$ $1/ permanent;
    labels:
      namespace: demo
    name: ingress-back-nginx-static-demo-8080-hello-world.local
    namespace: demo
  spec:
    rules:
    - host: hello-world.local
      http:
        paths:
        - backend:
            serviceName: nginx-static-demo
            servicePort: 8080
          path: /foo/bar/?(.*)
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
